# SiannaFinancials

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Claude.md  README.md
square18_signals/: README.md  pyproject.toml
square18_signals/examples/: demo.py
square18_signals/src/square18_signals/: __init__.py  iv.py  pricing.py  recommender.py  strategies.py
square18_signals/tests/: conftest.py  test_iv.py  test_pricing.py  test_recommender.py  test_strategies.py
square18_signals_web/: .env.example  README.md  backtest_verdict.json  requirements.txt  run.sh  signal_thresholds.json
square18_signals_web/app/: data.py  main.py  models.py  services.py  signal_report.py
square18_signals_web/app/analyst/: __init__.py  constants.py  copy_trade.py  data.py  earnings.py  factors.py  indicators.py  llm.py  market.py  models.py  movers.py  options_flow.py  regime.py  report.py  search.py  signal_config.py  tradier_client.py  universe.py  yahoo_quotes.py
square18_signals_web/app/analyst/data/: sp500.json
square18_signals_web/reports/: signal_report_2026-04-22.md
square18_signals_web/static/: app.js  index.html  styles.css
square18_signals_web/tests/: conftest.py  test_app_comprehensive.py  test_copy_trade.py  test_crypto_snapshot.py  test_e2e_app.py  test_e2e_ui_playwright.py  test_indicators.py  test_market_news.py  test_screener.py  test_services_pure.py  test_signal_quality.py  test_stock_strategy.py  test_trade_plan_derived_math.py  test_yf_disable_flag.py
square18_signals_web/tools/: backtest_verdict.py
